[package]
name = "ggater-server"
version = "0.1.0"
edition = "2021"

[dependencies]
ggater = { path = '../ggater' }
axum = "0.7.9"
hyper = { version = "1.5.2", features = ["full"] }
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.5.2"
serde = { version = "1.0.216", features = ["serde_derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
